# django-ecommerce-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dump.rdb  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: admin.py  authentications.py  managers.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_create_delete_expired_otps_periodic_task.py  0002_user_is_email_verified_alter_user_first_name_and_more.py  0003_alter_user_is_active.py  0003_update_periodic_task_name.py  0004_merge_20260501_1818.py  0005_merge_20260501_1847.py  0006_alter_profilepicture_image_alter_profilepicture_user.py  0007_alter_profilepicture_user.py
accounts/utils/: emails.py  handle_cookie.py  otp.py
core/: __init__.py  celery.py  settings.py
templates/emails/: send_email_otp.html
