[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-celery-beat>=2.9.0",
    "django-cloudinary-storage>=0.3.0",
    "django-jazzmin>=3.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "whitenoise[brotli]>=6.12.0",
]
